--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.1'
 }
 
 test {
-    useJUnitPlatform()
+    useJUnit()
 }
